PLANET-5034 Fix Japanese search results button label overflow

--- a/assets/src/scss/pages/search/_search-results.scss
+++ b/assets/src/scss/pages/search/_search-results.scss
@@ -171,6 +171,7 @@
     background: #97ed90;
     border-radius: 8px;
     color: #1a1a1a;
+    word-break: keep-all;
 
     &.search-results-alternative-label-mobile {
       display: inline-block;
